--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Simone Rao</h1>
         <p>I am a second-year data science student and I love ice cream!</p>
+        <img src="images/IMG_1008.JPG" alt="A picture of myself in Retiro Park in Madrid">
 </body>
 </html>
