Added contact and projects page

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simone Rao: Personal site and portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Contact</title>
 </head>
 <body>
     <nav>
@@ -16,9 +15,8 @@
         </ul>
         </ul>
     </nav>
-    
-    <h1>Simone Rao</h1>
-        <p>Hi! I'm Simone! I am a second-year data science student and I love ice cream!</p>
-        <img src="images/IMG_1008.JPG" alt="A picture of myself in Retiro Park in Madrid" style="width: 50%; height: auto;">
+
+    <h1>Contact</h1>
+        <p>Here is where you can get in contact with me!</p>
 </body>
 </html>
