--- a/projects/index.html
+++ b/projects/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/">Home<</a></li>
+            <li><a href="/">Simone Rao: Personal site and portfolio</a></li>
             <li><a href="/projects/">Projects</a></li>
             <li><a href="/contact/">Contact</a></li>
             <li><a href="https://github.com/simonerao" target="_blank">GitHub</a></li>
@@ -17,6 +17,6 @@
         </ul>
     </nav>
     <h1>Projects</h1>
-    <p>Welcome to my projects page!</p>
+        <p>Welcome to my projects page!</p>
 </body>
 </html>
