--- a/contact/index.html
+++ b/contact/index.html
@@ -18,5 +18,27 @@
 
     <h1>Contact</h1>
         <p>Here is where you can get in contact with me!</p>
+
+    <form action="mailto: sirao@ucsd.edu" method="POST" enctype="text/plain">
+        <label>
+            Your Email:
+            <input type="email" name="email" required>
+        </label>
+        <br><br>
+
+        <label>
+            Subject:
+            <input name = "subject" required>
+        </label>
+        <br><br>
+
+        <label> 
+            Message: 
+            <textarea name="body" required></textarea>
+        </label>
+        <br><br>
+        
+        <button>Send</button>
+    </form>
 </body>
 </html>
