--- a/contact/index.html
+++ b/contact/index.html
@@ -9,8 +9,8 @@
     <nav>
         <ul>
             <li><a href="/">Simone Rao: Personal site and portfolio</a></li>
-            <li><a href="/projects/">Projects</a></li>
-            <li><a href="/contact/">Contact</a></li>
+            <li><a href="./projects/">Projects</a></li>
+            <li><a href="./contact/">Contact</a></li>
             <li><a href="https://github.com/simonerao" target="_blank">GitHub</a></li>
         </ul>
         </ul>
