--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/">Simone Rao: Personal site and portfolio</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="./projects/">Projects</a></li>
             <li><a href="./contact/">Contact</a></li>
             <li><a href="https://github.com/simonerao" target="_blank">GitHub</a></li>
