--- a/projects/index.html
+++ b/projects/index.html
@@ -17,6 +17,6 @@
         </ul>
     </nav>
     <h1>Projects</h1>
-        <p>Welcome to my projects page!</p>
+        <p>Welcome to my projects!</p>
 </body>
 </html>
