Saved resume changes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="./projects/">Projects</a></li>
             <li><a href="./contact/">Contact</a></li>
+            <li><a href="./resume/">Contact</a></li>
             <li><a href="https://github.com/simonerao" target="_blank">GitHub</a></li>
         </ul>
         </ul>
