--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -12,6 +12,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="./projects/">Projects</a></li>
             <li><a href="./contact/">Contact</a></li>
+            <li><a href="./resume/">Contact</a></li>
             <li><a href="https://github.com/simonerao" target="_blank">GitHub</a></li>
         </ul>
         </ul>
