--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects/">Projects</a></li>
-            <li><a href="contact/">Contact</a></li>
-            <li><a href="resume/">Resume</a></li>
-            <li><a href="https://github.com/simonerao" target="_blank">GitHub</a></li>
-        </ul>
-        </ul>
+        <a href="index.html">Home</a>
+        <a href="projects/">Projects</a>
+        <a href="contact/">Contact</a>
+        <a href="resume/">Resume</a>
+        <a href="https://github.com/simonerao" target="_blank">GitHub</a>
     </nav>
 
     <h1>Simone Rao</h1>
