--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="projects/">Projects</a>
-        <a href="contact/">Contact</a>
+        <a href="contact/" class="current">Contact</a>
         <a href="resume/">Resume</a>
         <a href="https://github.com/simonerao" target="_blank">GitHub</a>
     </nav>
