--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="index.html" class="current">Home</a>
         <a href="projects/">Projects</a>
         <a href="contact/">Contact</a>
         <a href="resume/">Resume</a>
