--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="projects/">Projects</a>
+        <a href="projects/" class="current">Projects</a>
         <a href="contact/">Contact</a>
         <a href="resume/">Resume</a>
         <a href="https://github.com/simonerao" target="_blank">GitHub</a>
