--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
         <a href="index.html">Home</a>
         <a href="projects/">Projects</a>
         <a href="contact/">Contact</a>
-        <a href="resume/">Resume</a>
+        <a href="resume/" class="current">Resume</a>
         <a href="https://github.com/simonerao" target="_blank">GitHub</a>
     </nav>
     <header>
