--- a/projects/index.html
+++ b/projects/index.html
@@ -17,5 +17,67 @@
     </nav>
     <h1>Projects</h1>
         <p>Welcome to my projects page!</p>
+        <div class="projects">
+            <article>
+                <h2>Lorem ipsum dolor sit.</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum odio cupiditate at numquam magni assumenda animi ratione, reiciendis et doloremque sint sunt architecto minus quia ad soluta tenetur aperiam? Minus!</p>
+            </article>
+            <article>
+                <h2>Quasi cupiditate nostrum alias.</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Numquam asperiores consectetur quae voluptatem consequatur non voluptate totam suscipit incidunt odit! Voluptas quisquam facilis maiores dolore iste, enim voluptates rerum ab officia omnis perferendis modi ipsa adipisci quidem cumque.</p>
+            </article>
+            <article>
+                <h2>Amet delectus rerum velit.</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Dolor, odit placeat sapiente aut quidem laudantium amet quo blanditiis tempore corrupti neque excepturi laborum ea animi molestias debitis eligendi adipisci consequuntur eos nobis voluptas deserunt eveniet. Aliquam, asperiores culpa!</p>
+            </article>
+            <article>
+                <h2>Laborum, deleniti? Vitae, qui?</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Non corrupti enim laborum aliquam, saepe culpa unde facere doloribus rerum numquam consequatur! Placeat ratione magnam fuga a fugiat voluptas ex quaerat, sit voluptate impedit. Eaque dolore aperiam numquam ipsam?</p>
+            </article>
+            <article>
+                <h2>Aliquam ipsa ea saepe?</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Doloribus corporis corrupti eos praesentium accusamus quia. Deleniti voluptatibus non accusantium eos culpa suscipit similique quos praesentium laboriosam reprehenderit, excepturi maiores aspernatur quidem mollitia magni unde, itaque animi, labore earum.</p>
+            </article>
+            <article>
+                <h2>Fuga assumenda vel voluptatibus!</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Atque similique perferendis omnis earum modi vitae, aperiam ducimus, optio repellat ea magni aspernatur quae quo accusamus, voluptas dolore ipsa quis beatae necessitatibus perspiciatis eos! Praesentium repudiandae corrupti doloribus deserunt.</p>
+            </article>
+            <article>
+                <h2>Voluptas quidem illum sint!</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Vitae nulla quisquam minima officia amet quasi sapiente sed aperiam, fugiat, commodi explicabo numquam odit, rem veritatis provident eligendi placeat praesentium illo possimus quia. Natus, architecto in? Neque, inventore quis!</p>
+            </article>
+            <article>
+                <h2>Et alias rem nostrum!</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Impedit eaque pariatur id cumque animi! Reprehenderit ad praesentium natus dolor dolore, iure vero in eligendi, at enim veniam rem maiores expedita dicta nulla sequi fuga fugiat et! Odit, animi!</p>
+            </article>
+            <article>
+                <h2>Fugiat reprehenderit quo voluptas.</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Officiis laudantium cupiditate sed vero recusandae aliquid veritatis. Nulla, placeat doloremque! Excepturi nam ullam nostrum hic laborum animi neque possimus amet, esse, reprehenderit pariatur aut id ipsum, fuga unde molestias.</p>
+            </article>
+            <article>
+                <h2>Officia tempore similique impedit.</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Libero ad laboriosam numquam alias sequi est inventore enim! Est nisi beatae consequuntur molestias quod doloribus, suscipit nihil laboriosam nesciunt, laudantium nobis delectus facilis id illo accusantium modi totam eum.</p>
+            </article>
+            <article>
+                <h2>Labore saepe tenetur architecto!</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Natus fugit sapiente, magnam beatae atque ipsa ratione eveniet dolor commodi? Quae ad laudantium libero facilis veniam vitae fugit ex totam quia tempora omnis eligendi, saepe recusandae ipsum fugiat obcaecati!</p>
+            </article>
+            <article>
+                <h2>Pariatur debitis corporis quam!</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Iste veniam ratione tenetur distinctio quo possimus, quaerat laboriosam modi exercitationem nihil quia cupiditate in? Delectus quam, saepe quisquam tenetur modi soluta a velit officiis placeat recusandae consequatur commodi voluptates!</p>
+            </article>
+        </div>
 </body>
 </html>
