--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@
         <a href="https://github.com/simonerao" target="_blank">GitHub</a>
     </nav>
     <h1>Projects</h1>
-        <p>Welcome to my projects page!</p>
+        <h3>Welcome to my projects page!</h3>
         <div class="projects">
             <article>
                 <h2>Lorem ipsum dolor sit.</h2>
