--- a/contact/index.html
+++ b/contact/index.html
@@ -40,6 +40,6 @@
         
         <button>Send</button>
     </form>
-    <script type="module" src="global.js"></script>
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
