--- a/resume/index.html
+++ b/resume/index.html
@@ -138,6 +138,6 @@
 
     </main>
 
-    <script type="module" src="global.js"></script>
+    <script type="module" src="../global.js"></script>
     </body>
 </html>
