--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <h1>Simone Rao</h1>
         <p>Hi! I'm Simone! I am a second-year data science student and I love ice cream!</p>
         <img src="images/IMG_1008.JPG" alt="A picture of myself in Retiro Park in Madrid" style="width: 30%; height: auto;">
-    <script type="module" src="global.js"></script>
+    <script type="module" src="/portfolio/global.js"></script>
 </body>
 </html>
