--- a/resume/index.html
+++ b/resume/index.html
@@ -6,6 +6,7 @@
     <title>Resume</title>
     <link rel="stylesheet" href="../style.css">
     <base href="https://simonerao.github.io/portfolio/">
+    <script type="module" src="/portfolio/global.js"></script>
 </head>
 <body>
     <nav>
@@ -138,6 +139,5 @@
 
     </main>
 
-    <script type="module" src="../global.js"></script>
     </body>
 </html>
