--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="../style.css">
     <base href="https://simonerao.github.io/portfolio/">
-    <script type="module" src="../global.js"></script>
+    <script type="module" src="global.js"></script>
 </head>
 <body>
     <nav>
