--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@
     <title>Projects</title>
     <link rel="stylesheet" href="../style.css">
     <base href="https://simonerao.github.io/portfolio/">
-    <script type="module" src="/portfolio/global.js"></script>
+    <script type="module" src="global.js"></script>
 </head>
 <body>
     <nav>
