--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simone Rao: Personal site and portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <base href="https://simonerao.github.io/portfolio/">
-
+    <link rel="stylesheet" href="/portfolio/style.css">
 </head>
 <body>
     <nav>
-        <a href="index.html" class="current">Home</a>
-        <a href="projects/">Projects</a>
-        <a href="contact/">Contact</a>
-        <a href="resume/">Resume</a>
+        <a href="/portfolio/index.html" class="current">Home</a>
+        <a href="/portfolio/projects/">Projects</a>
+        <a href="/portfolio/contact/">Contact</a>
+        <a href="/portfolio/resume/">Resume</a>
         <a href="https://github.com/simonerao" target="_blank">GitHub</a>
     </nav>
 
     <h1>Simone Rao</h1>
-        <p>Hi! I'm Simone! I am a second-year data science student and I love ice cream!</p>
-        <img src="images/IMG_1008.JPG" alt="A picture of myself in Retiro Park in Madrid" style="width: 30%; height: auto;">
+    <p>Hi! I'm Simone! I am a second-year data science student and I love ice cream!</p>
+    <img src="images/IMG_1008.JPG" alt="A picture of myself in Retiro Park in Madrid" style="width: 30%; height: auto;">
+
     <script type="module" src="/portfolio/global.js"></script>
 </body>
 </html>
