--- a/contact/index.html
+++ b/contact/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="../style.css">
-    <base href="https://simonerao.github.io/portfolio/">
-    <script type="module" src="global.js"></script>
+    <link rel="stylesheet" href="/portfolio/style.css">
+    <script type="module" src="/portfolio/global.js"></script>
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="projects/">Projects</a>
-        <a href="contact/" class="current">Contact</a>
-        <a href="resume/">Resume</a>
+        <a href="/portfolio/index.html">Home</a>
+        <a href="/portfolio/projects/" >Projects</a>
+        <a href="/portfolio/contact/" class="current">Contact</a>
+        <a href="/portfolio/resume/">Resume</a>
         <a href="https://github.com/simonerao" target="_blank">GitHub</a>
     </nav>
 
