--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
     <nav>
         <a href="/portfolio/index.html">Home</a>
         <a href="/portfolio/projects/" >Projects</a>
-        <a href="/portfolio/contact/" class="current">Contact</a>
+        <a href="/portfolio/contact/">Contact</a>
         <a href="/portfolio/resume/">Resume</a>
         <a href="https://github.com/simonerao" target="_blank">GitHub</a>
     </nav>
