--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="/portfolio/index.html" class="current">Home</a>
+        <a href="/portfolio/index.html">Home</a>
         <a href="/portfolio/projects/">Projects</a>
         <a href="/portfolio/contact/">Contact</a>
         <a href="/portfolio/resume/">Resume</a>
