--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <a href="/portfolio/index.html">Home</a>
-        <a href="/portfolio/projects/" class="current">Projects</a>
+        <a href="/portfolio/projects/">Projects</a>
         <a href="/portfolio/contact/">Contact</a>
         <a href="/portfolio/resume/">Resume</a>
         <a href="https://github.com/simonerao" target="_blank">GitHub</a>
