--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
     <h1>Projects</h1>
         <h3>Welcome to my projects page!</h3>
         <div class="projects">
-            <article>
+            <!-- <article>
                 <h2>Lorem ipsum dolor sit.</h2>
                 <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum odio cupiditate at numquam magni assumenda animi ratione, reiciendis et doloremque sint sunt architecto minus quia ad soluta tenetur aperiam? Minus!</p>
@@ -70,8 +70,10 @@
                 <h2>Pariatur debitis corporis quam!</h2>
                 <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
                 <p>Iste veniam ratione tenetur distinctio quo possimus, quaerat laboriosam modi exercitationem nihil quia cupiditate in? Delectus quam, saepe quisquam tenetur modi soluta a velit officiis placeat recusandae consequatur commodi voluptates!</p>
-            </article>
+            </article> -->
         </div>
+    <script type="module" src="../global.js"></script>
+    <script type="module" src="./projects.js"></script>
 
 </body>
 </html>
