--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="/portfolio/global.js"></script>
 </head>
 <body>
-    <h1>Projects</h1>
+    <h1 class="projects-title">Projects</h1>
         <h3>Welcome to my projects page!</h3>
         <div class="projects">
             <!-- <article>
