--- a/projects/index.html
+++ b/projects/index.html
@@ -72,7 +72,7 @@
                 <p>Iste veniam ratione tenetur distinctio quo possimus, quaerat laboriosam modi exercitationem nihil quia cupiditate in? Delectus quam, saepe quisquam tenetur modi soluta a velit officiis placeat recusandae consequatur commodi voluptates!</p>
             </article> -->
         </div>
-    <script type="module" src="/portfolio/global.js"></script>
+    <script type="module" src="${BASE_PATH}global.js"></script>
     <script type="module" src="/portfolio/projects.js"></script>
         
 
