--- a/projects/index.html
+++ b/projects/index.html
@@ -73,7 +73,7 @@
             </article> -->
         </div>
     <script type="module" src="${BASE_PATH}global.js"></script>
-    <script type="module" src="/portfolio/projects.js"></script>
+    <script type="module" src="${BASE_PATH}projects/projects.js"></script>
         
 
 </body>
