--- a/projects/index.html
+++ b/projects/index.html
@@ -72,8 +72,8 @@
                 <p>Iste veniam ratione tenetur distinctio quo possimus, quaerat laboriosam modi exercitationem nihil quia cupiditate in? Delectus quam, saepe quisquam tenetur modi soluta a velit officiis placeat recusandae consequatur commodi voluptates!</p>
             </article> -->
         </div>
-    <script type="module" src="${BASE_PATH}global.js"></script>
-    <script type="module" src="${BASE_PATH}projects/projects.js"></script>
+    <script src="../global.js" type="module"></script>
+    <script src="projects.js" type="module"></script>
         
 
 </body>
