--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <img src="images/IMG_1008.JPG" alt="A picture of myself in Retiro Park in Madrid" style="width: 30%; height: auto;">
 
     <!-- Projects container where latest projects will appear -->
-    <div class="projects"></div>
+    <h2>Latest Projects</h2>
+    <div class="projects">
+        
+    </div>
+
+    <script src="index.js" type="module" defer></script>
 
     <script type="module" src="/portfolio/global.js"></script>
 </body>
