--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 
     <h1>Simone Rao</h1>
+
+    <h2>GitHub Profile Stats</h2>
+    <div id="profile-stats"></div>
+
     <p>Hi! I'm Simone! I am a second-year data science student and I love ice cream!</p>
     
 
@@ -17,7 +21,7 @@
     <!-- Projects container where latest projects will appear -->
     <h2>Latest Projects</h2>
     <div class="projects">
-        
+
     </div>
 
     <script src="index.js" type="module" defer></script>
