--- a/projects/index.html
+++ b/projects/index.html
@@ -10,6 +10,11 @@
 <body>
     <h1 class="projects-title">Projects</h1>
         <h3>Welcome to my projects page!</h3>
+
+        <svg id="projects-pie-plot" viewBox="-50 -50 100 100">
+            <circle cx="0" cy="0" r="50" fill="red" />
+        </svg>
+        
         <div class="projects">
             <!-- <article>
                 <h2>Lorem ipsum dolor sit.</h2>
