--- a/projects/index.html
+++ b/projects/index.html
@@ -11,9 +11,7 @@
     <h1 class="projects-title">Projects</h1>
         <h3>Welcome to my projects page!</h3>
 
-        <svg id="projects-pie-plot" viewBox="-50 -50 100 100">
-            <path d="M -50 0 A 50 50 0 0 1 50 0 A 50 50 0 0 1 -50 0" fill="red" />
-        </svg>
+        <svg id="projects-pie-plot" viewBox="-50 -50 100 100"></svg>
         
         <div class="projects">
             <!-- <article>
