--- a/projects/index.html
+++ b/projects/index.html
@@ -12,6 +12,8 @@
         <h3>Welcome to my projects page!</h3>
 
         <svg id="projects-pie-plot" viewBox="-50 -50 100 100"></svg>
+
+        <ul class="legend"></ul>
         
         <div class="projects">
             <!-- <article>
