--- a/projects/index.html
+++ b/projects/index.html
@@ -11,9 +11,10 @@
     <h1 class="projects-title">Projects</h1>
         <h3>Welcome to my projects page!</h3>
 
-        <svg id="projects-pie-plot" viewBox="-50 -50 100 100"></svg>
-
-        <ul class="legend"></ul>
+        <div class="container">
+            <svg id="projects-pie-plot" viewBox="-50 -50 100 100"></svg>
+            <ul class="legend"></ul>
+        </div>  
         
         <div class="projects">
             <!-- <article>
