--- a/meta/index.html
+++ b/meta/index.html
@@ -4,8 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Meta</title>
+  <link rel="stylesheet" href="/portfolio/style.css">
+  <script type="module" src="/portfolio/global.js"></script>
 </head>
-<body>Meta</h1>
+<body>
+  <h1>Codebase Statistics</h1>
   <p>This page includes stats about the code of this website.</p>
+
+  <!-- Placeholder for displaying stats -->
+  <div id="stats"></div>
+
+  <!-- Import the main.js file -->
+  <script type="module" src="main.js"></script>
 </body>
 </html>
