--- a/meta/index.html
+++ b/meta/index.html
@@ -14,6 +14,10 @@
   <!-- Placeholder for displaying stats -->
   <div id="stats"></div>
 
+  <h2>Commits by time of day</h2>
+  <div id="chart"></div>
+
+
   <!-- Import the main.js file -->
   <script type="module" src="main.js"></script>
 </body>
