--- a/meta/index.html
+++ b/meta/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Meta</title>
-  <link rel="stylesheet" href="/portfolio/style.css">
+  <link rel="stylesheet" href="../style.css">
   <script type="module" src="/portfolio/global.js"></script>
+
 </head>
 <body>
   <h1>Codebase Statistics</h1>
