added description writeup

--- a/meta/index.html
+++ b/meta/index.html
@@ -44,5 +44,6 @@
 
   <!-- Import the main.js file -->
   <script type="module" src="main.js"></script>
+  <script src="../global.js" type="module"></script>
 </body>
 </html>
